tdf#150622 sidebar icons empty in High Contrast mode

Change-Id: Icfa78f0f655ee467c62cbc309b8e57ac310a73e7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141021
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>